# Eng-de-Sofware-I---UNILAB

./: README.md  package-lock.json
.github/workflows/: ci.yaml
diagrama/: READM.md
projeto/back-end/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements-dev.txt
projeto/back-end/app/: __init__.py  config.py  schemas.py  swagger.py
projeto/back-end/app/controller/auth/: __init__.py
projeto/back-end/app/controller/pedido/: __init__.py
projeto/back-end/app/controller/produto/: __init__.py
projeto/back-end/app/controller/restaurante/: __init__.py
projeto/back-end/app/controller/usuario/: __init__.py  retrive.yaml
projeto/back-end/app/database/: connection.py
projeto/back-end/app/docs/auth/: refresh_token.yaml  signup.yaml
projeto/back-end/app/docs/usuario/: delete.yaml  retrive.yaml  retrive_all_users.yaml  update.yaml
projeto/back-end/app/model/: models.py
projeto/back-end/app/repositor/pedido/: __init__.py
projeto/back-end/app/repositor/produto/: __init__.py
projeto/back-end/app/repositor/restaurante/: __init__.py
projeto/back-end/app/repositor/usuario/: __init__.py
projeto/back-end/app/utils/: utils_functions.py
projeto/back-end/migrations/: env.py
projeto/back-end/migrations/versions/: 429ca91a3cfb_cria_as_tabelas_do_banco_de_dados.py  82f6d87d3759_cria_as_tabalas_do_banco_de_dados.py
projeto/controller/: Controller.py
projeto/front-end/: README.md  index.html  package-lock.json  package.json
projeto/front-end/src/: App.tsx
projeto/front-end/src/Mock/: data.tsx
projeto/front-end/src/components/: FoodCategory.tsx  Footer.tsx  Header.tsx  PopularMenuCard.tsx  RestaurantCard.tsx  RestautantCard.tsx
projeto/front-end/src/layout/: index.tsx
projeto/front-end/src/pages/Home/: index.tsx
projeto/front-end/src/pages/Login/: index.tsx
projeto/front-end/src/pages/Register/: index.tsx
projeto/front-end/src/routes/: index.tsx
