[tool.poetry]
name = "projeto-restaurante"
version = "0.1.0"
description = "Projeto da disciplina de Engenharia de software do professor Tales Paiva Nogueira - UNILAB"
authors = ["josedembo <josedembo18@aluno.unilab.edu.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
