[tool.poetry]
name = "projeto-restaurante"
version = "0.1.0"
description = "Projeto da disciplina de Engenharia de software do professor Tales Paiva Nogueira - UNILAB"
authors = ["josedembo <josedembo18@aluno.unilab.edu.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
flask-jwt-extended = "^4.6.0"
flasgger = "^0.9.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select =['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'flask run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
